@@ -1,6 +1,8 @@
 14 Jan 2010 - 2.5.12
 --------------------
 
+ * Now support macro expansion in numeric operators (@eq, @ge, @lt, etc.)
+
  * Update copyright to 2010.
 
  * Reserved 700,000-799,999 IDs for Ivan Ristic.
